--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Hello, Code School!</h1>
-
+    <h2>Testing Success</h2>
     <ul>
       <li>JavaScript</li>
       <li>Angular.js</li>
